Add links to index and Fix Shin Ramen link

--- a/adobo.html
+++ b/adobo.html
@@ -33,5 +33,6 @@
       </li>
       <li>Cook until chicken is tender and then serve.</li>
     </ol>
+    <a href="index.html">Recipe Page</a>
   </body>
 </html>
