--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>RyanD College Recipes</h1>
+    <h1>College Recipes</h1>
     <ul>
       <li><a href="adobo.html">Adobo Recipe</a></li>
       <li><a href="sinigang.html">Sinigang Recipe</a></li>
-      <li><a href="Cheesy_Shin_Ramen.html">Cheesy Shin Ramen Recipe</a></li>
+      <li><a href="cheesy_shin_ramen.html">Cheesy Shin Ramen Recipe</a></li>
     </ul>
   </body>
 </html>
