--- a/sinigang.html
+++ b/sinigang.html
@@ -30,5 +30,6 @@
       <li>Simmer for minimum of 2 hours.</li>
       <li>Serve with rice.</li>
     </ol>
+    <a href="index.html">Recipe Page</a>
   </body>
 </html>
