--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="adobo.html">Adobo Recipe</a></li>
       <li><a href="sinigang.html">Sinigang Recipe</a></li>
-      <li><a href="cheesy_shin_ramen.html">Cheesy Shin Ramen Recipe</a></li>
+      <li><a href="cheesy-shin-ramen.html">Cheesy Shin Ramen Recipe</a></li>
     </ul>
   </body>
 </html>
